# minimal-annotation-muscle-segmentation

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .secrets.baseline  README.md  pyproject.toml  requirements-cli.txt  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  constraints.txt  main.yaml
docker/: Dockerfile.thigh  README.md  labels_thigh.txt  nnUNetTrainerV2_MUSEGAI.py  nnunet_predict.py  requirements.txt
docs/: getting_started.md  project_specific_setup.md  quickstart.md  updating_requirements.md  using_poetry.md
museg/: __init__.py  api.py  cli.py  itklabels.py  metaimage.py
musegai/: api.py  cli.py
tests/: test_museg.py
