[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "MuSeg-AI"
description = "A minimal annotation muscle segmentation toolbox."
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "numpy",
    "SimpleITK",
    "docker",
]

[project.optional-dependencies]
cli = ["click"]

[tool.setuptools]
include-package-data = true

# entry point
[project.scripts]
museg-ai = "musegai.cli:cli"
