[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "MuSeg-AI"
description = "A minimal annotation muscle segmentation toolbox."
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "numpy",
    "SimpleITK",
    "docker",
]

[project.optional-dependencies]
cli = ["click"]
dev = [
    "black==23.11.0",
    "coverage==7.3.2",
    "detect-secrets==1.2.0",
    "flake8==6.1.0",
    "flake8-docstrings==1.7.0",
    "flake8-eradicate==1.5.0",
    "flake8-fixme==1.1.1",
    "flake8-implicit-str-concat==0.4.0",
    "flake8-no-pep420==2.7.0",
    "flake8-print==5.0.0",
    "flake8-return==1.2.0",
    "ipdb==0.13.13",
    "isort==5.12.0",
    "jupyter-black==0.3.4",
    "pip-audit==2.6.1",
    "pre-commit==3.5.0",
    "pylint==3.0.2",
    "pytest==7.4.3",
    "towncrier==23.11.0",
]

[tool.setuptools]
include-package-data = true
py-modules = []  # avoid error with pip-compile, cf. https://github.com/jazzband/pip-tools/issues/1711

# entry point
[project.scripts]
museg-ai = "musegai.cli:cli"

############
# ✅ Linters
############
[tool.black]
line-length = 175
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 175
default_section = "THIRDPARTY"
known_first_party = ["musegai"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
add_imports = "from __future__ import annotations"

[tool.pylint.MASTER]
ignore-paths = [".git"]
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
enable = "all"
max-module-lines = 2000
max-line-length = 175
max-locals = 50
min-similarity-lines = 150
max-statements = 89
max-args = 22
max-branches = 17
# good-names = []
# disable = []
logging-format-style = "new"

##############
# 📣 Towncrier
##############
[tool.towncrier]
package = "musegai"
package_dir = "."
filename = "CHANGELOG.md"
directory = ".changelog/"
template = ".changelog/template.md"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/fabianbalsiger/minimal-annotation-muscle-segmentation/issues{issue})"
start_string = "<!-- TOWNCRIER -->\n"
underlines = ["", ""]

# .added for new features
# .changed for changes in existing functionality
# .deprecated for soon-to-be removed features
# .removed for now removed features
# .fixed for any bug fixes
# .security in case of vulnerabilities
# .analysis for data analyses
# .docs for documentation improvements
# .maintenance for maintenance tasks & upgrades
[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "analysis"
name = "Analyses"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance Changes"
showcontent = true
